# diffuseLLM_agent

./: Dockerfile  README.md  STYLE_GUIDE.md  config.yaml.example  pyproject.toml  requirements.txt
docs/: CORE_PREDICTOR_TRAINING.md  FINE_TUNING.md  HOW_TO_USE.md  INSTALLATION.md
scripts/: active_learning_loop.py  finetune_lora.py  launch_assistant.py  prepare_finetune_data.py  profile_style.py  run_assistant.py  start_webui.py  train_core_predictor.py
src/: formatter.py  style_scorer.py
src/agent_group/: __init__.py  collaborative_agent_group.py  diffusion_core.py  exceptions.py  llm_core.py
src/builder/: __init__.py  commit_builder.py
src/digester/: __init__.py  graph_structures.py  knowledge_graph.py  repository_digester.py  signature_trie.py
src/learning/: __init__.py  core_predictor.py  easyedit_helper.py  ft_dataset.py
src/mcp/: mcp_manager.py
src/planner/: phase_model.py  phase_planner.py  refactor_grammar.py  spec_model.py
src/profiler/: black_analyzer.py  config_generator.py  database_setup.py  diffusion_interfacer.py  docstring_extractor.py  identifier_extractor.py  llm_interfacer.py  naming_conventions.py  orchestrator.py  profile_io.py  ruff_analyzer.py  sample_weigher.py  style_fingerprint.py  style_sampler.py  style_scorer.py  style_validator.py
src/retriever/: symbol_retriever.py
src/spec_normalizer/: __init__.py  diffusion_spec_normalizer.py  spec_fusion.py  spec_normalizer_interface.py  t5_client.py
src/specs/: schemas.py
src/transformer/: __init__.py  exceptions.py  identifier_renamer.py  patch_applier.py
webapp/: app.py
(+47 files in other folders)
